--- a/Calendario_Fevereiro_2026_novo.html
+++ b/Calendario_Fevereiro_2026_novo.html
@@ -267,18 +267,262 @@
             flex-shrink: 0;
             border-top: 1px solid #dee2e6;
         }
+
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            body {
+                padding: 2px;
+                font-size: 10px;
+            }
+
+            .container {
+                min-height: calc(100vh - 4px);
+            }
+
+            .header {
+                padding: 12px;
+            }
+
+            .header h1 {
+                font-size: 24px;
+                gap: 8px;
+            }
+
+            .header h1::before {
+                font-size: 24px;
+            }
+
+            .header p {
+                font-size: 14px;
+            }
+
+            .main-content {
+                flex-direction: column;
+                padding: 8px;
+                gap: 8px;
+            }
+
+            .calendar-section {
+                width: 100%;
+            }
+
+            .calendar-grid {
+                gap: 1px;
+                padding: 4px;
+            }
+
+            .day-header {
+                padding: 6px 2px;
+                font-size: 10px;
+            }
+
+            .day {
+                min-height: 35px;
+                font-size: 14px;
+            }
+
+            .legend-section {
+                width: 100%;
+                padding: 8px;
+            }
+
+            .legend h3 {
+                font-size: 14px;
+                margin-bottom: 8px;
+            }
+
+            .legend-item {
+                padding: 8px;
+                margin-bottom: 6px;
+            }
+
+            .legend-color {
+                width: 16px;
+                height: 16px;
+                margin-right: 8px;
+            }
+
+            .legend-title {
+                font-size: 12px;
+            }
+
+            .legend-desc {
+                font-size: 10px;
+            }
+
+            .footer {
+                padding: 6px;
+                font-size: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .header h1 {
+                font-size: 20px;
+            }
+
+            .header h1::before {
+                font-size: 20px;
+            }
+
+            .header p {
+                font-size: 12px;
+            }
+
+            .day {
+                min-height: 30px;
+                font-size: 12px;
+            }
+
+            .day.taken::after {
+                font-size: 12px;
+            }
+        }
         
         @media print {
+            @page {
+                size: A4 landscape;
+                margin: 0.3in;
+            }
+
             body {
                 background: white !important;
                 padding: 0;
+                font-size: 10px;
             }
-            
+
             .container {
                 box-shadow: none;
                 border-radius: 0;
-                height: 100vh;
+                height: auto;
+                min-height: auto;
                 border: none;
+                page-break-inside: avoid;
+                max-height: 100vh;
+                overflow: visible;
+            }
+
+            .header {
+                background: #667eea !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+                padding: 12px;
+                page-break-after: avoid;
+            }
+
+            .header h1 {
+                font-size: 24px;
+                margin-bottom: 4px;
+            }
+
+            .header p {
+                font-size: 14px;
+            }
+
+            .main-content {
+                flex-direction: column;
+                padding: 8px;
+                gap: 8px;
+            }
+
+            .calendar-section {
+                width: 100%;
+                margin-bottom: 12px;
+            }
+
+            .calendar-grid {
+                gap: 1px;
+                padding: 6px;
+                page-break-inside: avoid;
+            }
+
+            .day-header {
+                padding: 6px 2px;
+                font-size: 10px;
+            }
+
+            .day {
+                min-height: 35px;
+                font-size: 14px;
+                border: 1px solid #000 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            .day:hover {
+                transform: none !important;
+                box-shadow: none !important;
+            }
+
+            .legend-section {
+                width: 100%;
+                max-height: none;
+                page-break-inside: avoid;
+            }
+
+            .legend h3 {
+                font-size: 14px;
+                margin-bottom: 8px;
+            }
+
+            .legend-item {
+                padding: 8px;
+                margin-bottom: 6px;
+            }
+
+            .legend-color {
+                width: 16px;
+                height: 16px;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            .legend-title {
+                font-size: 12px;
+            }
+
+            .legend-desc {
+                font-size: 10px;
+            }
+
+            .footer {
+                padding: 6px;
+                font-size: 10px;
+                page-break-inside: avoid;
+            }
+
+            /* Ensure all colored backgrounds print */
+            .red-period {
+                background: #ffeaea !important;
+                color: #721c24 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            .green-period {
+                background: #e8f5e8 !important;
+                color: #155724 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            .yellow-period {
+                background: #fff8e1 !important;
+                color: #856404 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            .pink-period {
+                background: #f8e6ff !important;
+                color: #6f42c1 !important;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            .taken::after {
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
             }
         }
     </style>
